--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
     </div>
 
     <div style="text-align: center;">
-        <h4 style='color:black'>{{ val }}</h4>
+        <h4 style='color:white'>{{ val }}</h4>
     </div>
 
     <!-- Prediction Area -->
